RESOLVED FIXED221460
[LFC][Integration] Hit testing broken for descendants of pointer-events:none boxes
https://bugs.webkit.org/show_bug.cgi?id=221460
Summary [LFC][Integration] Hit testing broken for descendants of pointer-events:none ...
Antti Koivisto
Reported 2021-02-05 05:11:50 PST
Hit testing bug
Attachments
patch (4.33 KB, patch)
2021-02-05 05:35 PST, Antti Koivisto
no flags
patch (4.25 KB, patch)
2021-02-05 05:42 PST, Antti Koivisto
zalan: review+
ews-feeder: commit-queue-
patch (4.48 KB, patch)
2021-02-05 07:34 PST, Antti Koivisto
no flags
patch (5.16 KB, patch)
2021-02-05 09:34 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2021-02-05 05:35:53 PST
Antti Koivisto
Comment 2 2021-02-05 05:36:39 PST
Antti Koivisto
Comment 3 2021-02-05 05:42:04 PST
Antti Koivisto
Comment 4 2021-02-05 07:34:11 PST
Antti Koivisto
Comment 5 2021-02-05 09:34:37 PST
EWS
Comment 6 2021-02-05 12:48:28 PST
Committed r272435: <https://trac.webkit.org/changeset/272435> All reviewed patches have been landed. Closing bug and clearing flags on attachment 419418 [details].
Note You need to log in before you can comment on or make changes to this bug.